Fixed margin on smaller devices

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -212,8 +212,8 @@ h2 {
         position: relative;
         left: -4.5em;
         bottom: 2em;
-        width: calc(100% + 8em);
-        padding-right: 3.5em;
+        width: calc(100% + 7em);
+        padding-right: 7.5em;
 
     }
 
@@ -310,6 +310,10 @@ h2 {
     .my-work {
         background-attachment: scroll;
     }
+
+    section {
+        padding: 4em 1em;
+    }
 }
 
 /* About Me */
@@ -395,9 +399,6 @@ h2 {
     /* background-position: 50% 80%; */
 }
 
-.my-work .section__title {
-    /* color: var(--clr-accent); */
-}
 
 .my-work {
     display: flex;
@@ -443,6 +444,7 @@ h2 {
 
 .social-list__item {
     margin: 0 0.5em;
+    font-size: 2.2rem;
 }
 
 .social-list__link {
@@ -591,11 +593,10 @@ REGULAR NAV
         position: absolute;
         top: 0;
         right: 0;
-
         border: 0.3em outset var(--clr-accent);
-        z-index: 5;
+        z-index: 99;
         margin-right: 1em;
-        background-color: white;
+        background-color: var(--clr-background);
     }
 
     .nav-open a.icon {
